Added decoration to the second button.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <title></title>
 </head>
 <body ng-app="myMod">
@@ -11,17 +13,15 @@
 
 
 <div class="container" ng-controller="myCtrl">
-  <header><h1>Our words<h1></header>
+  <header><h1>{{heading}}<h1></header>
 
-  <button class="btn btn-primary btn-lg" ng-click="addWord()"> Words </button>
-  <button class="btn btn-primary btn-lg"> Words with decorations</button>
+  <button class="btn btn-primary btn-lg" ng-click="addUndecorWord()"> Words </button>
+  <button class="btn btn-primary btn-lg" ng-click="addDecorWord()"> Words with decorations</button>
   <button class="btn btn-primary btn-lg"> More words</button>
   <button class="btn btn-primary btn-lg"> More words with decorations</button>
 
   <div class="list-of-words">
-  <span ng-repeat="word in wordsOnPage track by $index">{{word}}</span>
-
-    {{1 +1 }}
+  <span ng-repeat="element in wordsOnPage track by $index" class="ng-class : {{element.decor}}">{{element.word}}</span>
 
   </div>
 </div>
